--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
     <div class="container">
       <div class="row">
         <div class="icon-sosial">
-          <a href="mailto:awahid.safhadi@gmail.com" class="btn-floating tooltipped teal darken-3" data-position="top"
-            data-tooltip="email">
+          <a href="mailto:lutvita.dwi_ti19@nusaputra.ac.id" class="btn-floating tooltipped teal darken-3"
+            data-position="top" data-tooltip="email">
             <i class="material-icons">mail_outline</i>
           </a>
-          <a href="https://twitter.com/awahids_" class="btn-floating tooltipped blue darken-2" data-position="top"
+          <a href="https://twitter.com/lutvita_" class="btn-floating tooltipped blue darken-2" data-position="top"
             data-tooltip="twitter">
             <i class='bx bxl-twitter'></i>
           </a>
-          <a href="https://github.com/awahids" class="btn-floating tooltipped green darken-3" data-position="top"
+          <a href="https://github.com/lutvita16" class="btn-floating tooltipped green darken-3" data-position="top"
             data-tooltip="github">
             <i class='bx bxl-github'></i>
           </a>
-          <a href="https://www.linkedin.com/in/awahids/" class="btn-floating tooltipped yellow darken-3"
+          <a href="https://www.linkedin.com/in/lutvita/" class="btn-floating tooltipped yellow darken-3"
             data-position="top" data-tooltip="linked in">
             <i class='bx bxl-linkedin'></i>
           </a>
@@ -169,7 +169,7 @@
             repeatCount="indefinite">
           </animateTransform>
         </svg>
-        by <a class="brown-text text-lighten-3" href="#">Awahid Safhadi</a>
+        by <a class="brown-text text-lighten-3" href="#">Lutvita Dwi Iklima</a>
       </div>
     </div>
   </footer>
@@ -180,22 +180,22 @@
       </a>
       <ul>
         <li>
-          <a href="mailto:awahid.safhadi@gmail.com" class="btn-floating tooltipped teal" data-position="left" data-tooltip="email">
+          <a href="mailto:lutvita.safhadi@gmail.com" class="btn-floating tooltipped teal" data-position="left" data-tooltip="email">
             <i class="material-icons">mail_outline</i>
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/awahids/" class="btn-floating tooltipped yellow darken-1" data-position="left" data-tooltip="linked in">
+          <a href="https://www.linkedin.com/in/lutvita/" class="btn-floating tooltipped yellow darken-1" data-position="left" data-tooltip="linked in">
             <i class='bx bxl-linkedin'></i>
           </a>
         </li>
         <li>
-          <a href="https://github.com/awahids" class="btn-floating tooltipped green" data-position="left" data-tooltip="github">
+          <a href="https://github.com/lutvita" class="btn-floating tooltipped green" data-position="left" data-tooltip="github">
             <i class='bx bxl-github'></i>
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/awahids_" class="btn-floating tooltipped blue" data-position="left" data-tooltip="twitter">
+          <a href="https://twitter.com/lutvita_" class="btn-floating tooltipped blue" data-position="left" data-tooltip="twitter">
             <i class='bx bxl-twitter'></i>
           </a>
         </li>
